# RaftKV

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: bench_main.cpp
proto/: raft.proto
src/: main.cpp
src/client/: client_main.cpp
src/kv/: state_machine.cpp  state_machine.h
src/network/: message.cpp  message.h  tcp_client.cpp  tcp_client.h  tcp_server.cpp  tcp_server.h
src/raft/: raft_node.cpp  raft_node.h
src/storage/: log_store.cpp  log_store.h
tests/: kv_test.cpp  network_test.cpp  persistence_test.cpp  raft_test.cpp
